--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,7 @@ jobs:
     - name: compile and release
       uses: ngs/go-release.action@v1.0.1
       env:
+        GO111MODULE: "on"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GOARCH: "386"
         GOOS: linux
@@ -21,6 +22,7 @@ jobs:
     - name: compile and release
       uses: ngs/go-release.action@v1.0.1
       env:
+        GO111MODULE: "on"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GOARCH: amd64
         GOOS: linux
@@ -33,6 +35,7 @@ jobs:
     - name: compile and release
       uses: ngs/go-release.action@v1.0.1
       env:
+        GO111MODULE: "on"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GOARCH: "arm"
         GOOS: linux
@@ -45,6 +48,7 @@ jobs:
     - name: compile and release
       uses: ngs/go-release.action@v1.0.1
       env:
+        GO111MODULE: "on"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GOARCH: arm64
         GOOS: linux
@@ -57,6 +61,7 @@ jobs:
     - name: compile and release
       uses: ngs/go-release.action@v1.0.1
       env:
+        GO111MODULE: "on"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GOARCH: amd64
         GOOS: darwin
@@ -69,6 +74,7 @@ jobs:
     - name: compile and release
       uses: ngs/go-release.action@v1.0.1
       env:
+        GO111MODULE: "on"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GOARCH: "386"
         GOOS: windows
@@ -81,6 +87,7 @@ jobs:
     - name: compile and release
       uses: ngs/go-release.action@v1.0.1
       env:
+        GO111MODULE: "on"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GOARCH: amd64
         GOOS: windows
