--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,94 +1,198 @@
-on: release
+on:
+  release:
+    types: [created]
 name: Build Release
 jobs:
   release-linux-386:
     name: release linux/386
     runs-on: ubuntu-latest
+    env:
+      GO111MODULE: "on"
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GOARCH: "386"
+      GOOS: linux
     steps:
-    - uses: actions/checkout@master
-    - name: compile and release
-      uses: ngs/go-release.action@v1.0.1
-      env:
-        GO111MODULE: "on"
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GOARCH: "386"
-        GOOS: linux
-        EXTRA_FILES: "README.md"
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.14
+      id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Get dependencies
+      run: |
+        go get -v -t -d ./...
+        if [ -f Gopkg.toml ]; then
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            dep ensure
+        fi
+    - name: Build
+      run: go build -v -o ${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/} .
+
+    - name: Upload the artifacts
+      uses: skx/github-action-publish-binaries@master
+      with:
+        args: '${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/}'
+
   release-linux-amd64:
     name: release linux/amd64
     runs-on: ubuntu-latest
+    env:
+      GO111MODULE: "on"
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GOARCH: "amd64"
+      GOOS: linux
     steps:
-    - uses: actions/checkout@master
-    - name: compile and release
-      uses: ngs/go-release.action@v1.0.1
-      env:
-        GO111MODULE: "on"
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GOARCH: amd64
-        GOOS: linux
-        EXTRA_FILES: "README.md"
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.14
+      id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Get dependencies
+      run: |
+        go get -v -t -d ./...
+        if [ -f Gopkg.toml ]; then
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            dep ensure
+        fi
+    - name: Build
+      run: go build -v -o ${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/} .
+
+    - name: Upload the artifacts
+      uses: skx/github-action-publish-binaries@master
+      with:
+        args: '${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/}'
   release-linux-arm:
     name: release linux/386
     runs-on: ubuntu-latest
+    env:
+      GO111MODULE: "on"
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GOARCH: "arm"
+      GOOS: linux
     steps:
-    - uses: actions/checkout@master
-    - name: compile and release
-      uses: ngs/go-release.action@v1.0.1
-      env:
-        GO111MODULE: "on"
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GOARCH: "arm"
-        GOOS: linux
-        EXTRA_FILES: "README.md"
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.14
+      id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Get dependencies
+      run: |
+        go get -v -t -d ./...
+        if [ -f Gopkg.toml ]; then
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            dep ensure
+        fi
+    - name: Build
+      run: go build -v -o ${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/} .
+
+    - name: Upload the artifacts
+      uses: skx/github-action-publish-binaries@master
+      with:
+        args: '${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/}'
   release-linux-arm64:
-    name: release linux/amd64
+    name: release linux/arm64
     runs-on: ubuntu-latest
+    env:
+      GO111MODULE: "on"
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GOARCH: "arm64"
+      GOOS: linux
     steps:
-    - uses: actions/checkout@master
-    - name: compile and release
-      uses: ngs/go-release.action@v1.0.1
-      env:
-        GO111MODULE: "on"
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GOARCH: arm64
-        GOOS: linux
-        EXTRA_FILES: "README.md"
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.14
+      id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Get dependencies
+      run: |
+        go get -v -t -d ./...
+        if [ -f Gopkg.toml ]; then
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            dep ensure
+        fi
+    - name: Build
+      run: go build -v -o ${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/} .
+
+    - name: Upload the artifacts
+      uses: skx/github-action-publish-binaries@master
+      with:
+        args: '${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/}'
   release-darwin-amd64:
     name: release darwin/amd64
     runs-on: ubuntu-latest
+    env:
+      GO111MODULE: "on"
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GOARCH: "amd64"
+      GOOS: darwin
     steps:
-    - uses: actions/checkout@master
-    - name: compile and release
-      uses: ngs/go-release.action@v1.0.1
-      env:
-        GO111MODULE: "on"
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GOARCH: amd64
-        GOOS: darwin
-        EXTRA_FILES: "README.md"
-  release-windows-386:
-    name: release windows/386
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: compile and release
-      uses: ngs/go-release.action@v1.0.1
-      env:
-        GO111MODULE: "on"
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GOARCH: "386"
-        GOOS: windows
-        EXTRA_FILES: "README.md"
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.14
+      id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Get dependencies
+      run: |
+        go get -v -t -d ./...
+        if [ -f Gopkg.toml ]; then
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            dep ensure
+        fi
+    - name: Build
+      run: go build -v -o ${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/} .
+
+    - name: Upload the artifacts
+      uses: skx/github-action-publish-binaries@master
+      with:
+        args: '${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/}'
   release-windows-amd64:
     name: release windows/amd64
     runs-on: ubuntu-latest
+    env:
+      GO111MODULE: "on"
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GOARCH: "amd64"
+      GOOS: windows
     steps:
-    - uses: actions/checkout@master
-    - name: compile and release
-      uses: ngs/go-release.action@v1.0.1
-      env:
-        GO111MODULE: "on"
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GOARCH: amd64
-        GOOS: windows
-        EXTRA_FILES: "README.md"
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.14
+      id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Get dependencies
+      run: |
+        go get -v -t -d ./...
+        if [ -f Gopkg.toml ]; then
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            dep ensure
+        fi
+    - name: Build
+      run: go build -v -o ${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/} .
+
+    - name: Upload the artifacts
+      uses: skx/github-action-publish-binaries@master
+      with:
+        args: '${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/}'
