--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,7 +34,7 @@ jobs:
     - name: Upload the artifacts
       uses: skx/github-action-publish-binaries@master
       with:
-        args: '${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/}'
+        args: '*terraform-provider-aws-synthetics*'
 
   release-linux-amd64:
     name: release linux/amd64
@@ -67,7 +67,7 @@ jobs:
     - name: Upload the artifacts
       uses: skx/github-action-publish-binaries@master
       with:
-        args: '${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/}'
+        args: '*terraform-provider-aws-synthetics*'
   release-linux-arm:
     name: release linux/386
     runs-on: ubuntu-latest
@@ -99,7 +99,7 @@ jobs:
     - name: Upload the artifacts
       uses: skx/github-action-publish-binaries@master
       with:
-        args: '${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/}'
+        args: '*terraform-provider-aws-synthetics*'
   release-linux-arm64:
     name: release linux/arm64
     runs-on: ubuntu-latest
@@ -131,7 +131,7 @@ jobs:
     - name: Upload the artifacts
       uses: skx/github-action-publish-binaries@master
       with:
-        args: '${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/}'
+        args: '*terraform-provider-aws-synthetics*'
   release-darwin-amd64:
     name: release darwin/amd64
     runs-on: ubuntu-latest
@@ -163,7 +163,7 @@ jobs:
     - name: Upload the artifacts
       uses: skx/github-action-publish-binaries@master
       with:
-        args: '${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/}'
+        args: '*terraform-provider-aws-synthetics*'
   release-windows-amd64:
     name: release windows/amd64
     runs-on: ubuntu-latest
@@ -195,4 +195,4 @@ jobs:
     - name: Upload the artifacts
       uses: skx/github-action-publish-binaries@master
       with:
-        args: '${GOOS}_${GOARCH}-terraform-provider-aws-synthetics_${GITHUB_REF##*/}'
+        args: '*terraform-provider-aws-synthetics*'
